# financial-analyst

./: main.py  pyproject.toml  tools.py
financial_advisor/: agent.py  prompt.py
financial_advisor/sub_agents/: data_analyst.py  financial_analyst.py  news_analyst.py
